@@ -105,12 +105,15 @@ class TUserManager extends TModule implements IUserManager
 	{
 		foreach($xmlNode->getElementsByTagName('user') as $node)
 		{
-			$name=strtolower($node->getAttribute('name'));
+			$name=trim(strtolower($node->getAttribute('name')));
 			$this->_users[$name]=$node->getAttribute('password');
 			if(($roles=trim($node->getAttribute('roles')))!=='')
 			{
 				foreach(explode(',',$roles) as $role)
-					$this->_roles[$name][]=$role;
+				{
+					if(($role=trim($role))!=='')
+						$this->_roles[$name][]=$role;
+				}
 			}
 		}
 		foreach($xmlNode->getElementsByTagName('role') as $node)
